--- a/V1/blog.html
+++ b/V1/blog.html
@@ -70,8 +70,7 @@
 				<div class="blogs">
 					<div class="text-center">
 						<h2>Blog</h2>
-						<p>Lorem ipsum dolor sit amet consectetur adipiscing elit Cras suscipit arcu<br>
-						vestibulum volutpat libero sollicitudin vitae Curabitur ac aliquam <br>
+						<p>Blog <br>
 						</p>
 					</div>
 					<hr>
