--- a/V1.1/index.html
+++ b/V1.1/index.html
@@ -90,6 +90,20 @@
 			</div>
 		</div>
 	</div>
+      
+      <div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<div class="text-center">
+					<h2>Welcome To Loei Of Land</h2>
+					<p> ข้อมูลเบื้องต้น <br>
+					</p>
+				</div>
+				<hr>
+			</div>
+		</div>
+	</div>
+      
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
@@ -108,21 +122,21 @@
 			<figure class="effect-zoe">
 				<img src="img/25.jpg" alt="img25"/>
 				<figcaption>
-					<h2> <span>จ.เลย</span></h2>
+					<h2> <span>ฟูจิ จ.เลย</span></h2>
 					<p class="icon-links">
-						<a href="#"><span class="icon-eye"></span></a>
+						<a href="Fuji.html"><span class="icon-eye"></span></a>
 					</p>
-					<p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
+					<p class="description">ขึ้นไปชมบรรยากาศ และมองเห็นยอดของ ภูหอกัน</p>
 				</figcaption>			
 			</figure>
 			<figure class="effect-zoe">
 				<img src="img/25.jpg" alt="img25"/>
 				<figcaption>
-					<h2> <span>จ.เลย</span></h2>
+					<h2> <span>ภูทอก จ.เลย</span></h2>
 					<p class="icon-links">
-						<a href="#"><span class="icon-eye"></span></a>
+						<a href="PuTok.html"><span class="icon-eye"></span></a>
 					</p>
-					<p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
+					<p class="description">ภูทอกแห่งนี้ก็มีเสน่ห์ที่เป็น จุดชมวิว ชมความงามของแม่น้ำโขง เมืองสานะคาม และแก่งคุดคู้ได้อย่างชัดเจน</p>
 				</figcaption>			
 			</figure>
 		</div>
