--- a/V1.1/Beta/srisongruk.html
+++ b/V1.1/Beta/srisongruk.html
@@ -49,8 +49,8 @@
     <nav  class="navbar navbar-default navbar-fixed-top"  role="navigation">
       <div  class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div  class="navbar-header"> <button  type="button"  class="navbar-toggle collapsed"
-             data-toggle="collapse"  data-target=".navbar-collapse.collapse"> <span
+        <div  class="navbar-header"> <button  type="button"  class="navbar-toggle collapsed"
+             data-toggle="collapse"  data-target=".navbar-collapse.collapse"> <span
                class="sr-only">Toggle navigation</span> <span  class="icon-bar"></span>
             <span  class="icon-bar"></span> <span  class="icon-bar"></span> </button>
           <a  class="navbar-brand"  href="index.html"><span>LoeiOfLand</span></a>
@@ -73,9 +73,9 @@
         <div  class="slider">
           <div  class="img-responsive">
             <ul  class="bxslider">
-              <li><img  src="img/slide/Slid1.jpg"  alt=""></li>
-              <li><img  src="img/slide/Slid2.jpg"  alt=""></li>
-              <li><img  src="img/slide/Slid3.jpg"  alt=""></li>
+              <li><img  src="img/srisongruk1.jpg"  alt=""></li>
+              <li><img  src="img/srisongruk2.jpg"  alt=""></li>
+              <li><img  src="img/srisongruk3.jpg"  alt=""></li>
             </ul>
           </div>
         </div>
@@ -85,21 +85,21 @@
  <o:OfficeDocumentSettings>  <o:AllowPNG/>
  </o:OfficeDocumentSettings></xml><![endif]-->
       <p  class="MsoNormal"  style="text-indent:36.0pt"><span  style="font-size:
-16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
+16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
            lang="TH"><span  style="font-weight: bold;">ข้อมูล</span></span></p>
       <p  class="MsoNormal"  style="text-indent:36.0pt"><span  style="font-size:
-16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
+16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
            lang="TH">พระธาตุศรีสองรัก
           ตั้งอยู่ริมฝั่งแม่น้ำหมัน อำเภอด่านซ้าย จังหวัดเลย
           สร้างขึ้นสมัยพระเจ้าไชยเชษฐาธิราช เมื่อปี พ.ศ. </span><span  style="font-size:
 16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-family:&quot;Cordia New&quot;;
 mso-bidi-theme-font:minor-bidi">2103</span><span  style="font-size:16.0pt;
-line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
+line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
            lang="TH"> เสร็จในปี พ.ศ. </span><span  style="font-size:
 16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-family:&quot;Cordia New&quot;;
 mso-bidi-theme-font:minor-bidi">2106</span></p>
       <p  class="MsoNormal"  style="text-indent:36.0pt"><span  style="font-size:
-16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
+16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
            lang="TH">พระธาตุศรีสองรักสร้างขึ้นเพื่อ
           เป็นสักขีพยานในการช่วยเหลือซึ่งกันและกันระหว่างกรุงศรีอยุธยา(สมัยพระมหา
           จักรพรรดิ)
@@ -107,7 +107,7 @@ mso-bidi-theme-font:minor-bidi">2106</span></p>
           สาธารณรัฐประชาธิปไตยประชาชนลาว)</span><span  style="font-size:16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;
 mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-family:&quot;Cordia New&quot;;mso-bidi-theme-font:minor-bidi"></span></p>
       <p  class="MsoNormal"  style="text-indent:36.0pt"><span  style="font-size:
-16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
+16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
            lang="TH">กษัตริย์ทั้งสองพระองค์ทรงครองราชสมบัติ
           ตรงกับสมัยที่พม่าเรืองอำนาจ และมีการรุกรานดินแดนต่าง ๆ เพื่อขยายอำนาจ
           สมเด็จพระมหาจักรพรรดิและพระเจ้าไชยเชษฐาธิราช จึงตกลงรวมกำลัง
@@ -120,31 +120,31 @@ mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-fa
 line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-family:&quot;Cordia New&quot;;mso-bidi-theme-font:
 minor-bidi"></span></p>
       <p  class="MsoNormal"  style="text-indent:36.0pt"><span  style="font-size:
-16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
+16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
            lang="TH">นอกจากนี้ภายในวัดยังมีพระพุทธรูปปางนาคปรก
           ศิลปะทิเบต หัวนาคปรกสร้างด้วยศิลา องค์พระพุทธรูปสร้างด้วยทองสัมริด
           มีหน้าตักกว้าง </span><span  style="font-size:16.0pt;line-height:115%;
-font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-family:&quot;Cordia New&quot;;mso-bidi-theme-font:minor-bidi">21</span><span
+font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-family:&quot;Cordia New&quot;;mso-bidi-theme-font:minor-bidi">21</span><span
            style="font-size:16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;
 mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"  lang="TH">
           นิ้ว สูง </span><span  style="font-size:16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;
-mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-family:&quot;Cordia New&quot;;mso-bidi-theme-font:minor-bidi">30</span><span
+mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-family:&quot;Cordia New&quot;;mso-bidi-theme-font:minor-bidi">30</span><span
            style="font-size:16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;
 mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"  lang="TH">
           นิ้ว</span><span  style="font-size:16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;
 mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-family:&quot;Cordia New&quot;;mso-bidi-theme-font:minor-bidi"></span></p>
       <p  class="MsoNormal"  style="text-indent:36.0pt"><span  style="font-size:
-16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
+16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
            lang="TH">ทุกวันขึ้น </span><span  style="font-size:16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;
 mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-family:&quot;Cordia New&quot;;mso-bidi-theme-font:minor-bidi">15
-          </span><span  style="font-size:16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
+          </span><span  style="font-size:16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"
            lang="TH">เดือน </span><span  style="font-size:16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;
 mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-family:&quot;Cordia New&quot;;mso-bidi-theme-font:minor-bidi">6
         </span><span  style="font-size:16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;
 mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi"  lang="TH">ชาว
           อำเภอด่านซ้าย
           หรือ"ลูกผึ้งลูกเทียน" จะร่วมกันจัดงานสมโภชพระธาตุขึ้น โดยจะนำต้นผึ้ง
-          มาถวายพระธาตุถือเป็นประเพณีอันศักดิ์สิทธิ์ที่เกิดขึ้นประจำทุกปี</span><span
+          มาถวายพระธาตุถือเป็นประเพณีอันศักดิ์สิทธิ์ที่เกิดขึ้นประจำทุกปี</span><span
            style="font-size:16.0pt;line-height:115%;font-family:&quot;Cordia New&quot;,sans-serif;
 mso-ascii-theme-font:minor-bidi;mso-hansi-theme-font:minor-bidi;mso-bidi-font-family:&quot;Cordia New&quot;;mso-bidi-theme-font:minor-bidi"></span></p>
       <!--[if gte mso 9]><xml>
