--- a/V1.1/blog.html
+++ b/V1.1/blog.html
@@ -123,6 +123,28 @@
 					<p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
 				</figcaption>			
 			</figure>
+                    
+                     <figure class="effect-zoe">
+				<img src="img/25.jpg" alt="img25"/>
+				<figcaption>
+					<h2> <span>จ.เลย</span></h2>
+					<p class="icon-links">
+						<a href="#"><span class="icon-eye"></span></a>
+					</p>
+					<p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
+				</figcaption>			
+			</figure>
+                    
+                     <figure class="effect-zoe">
+				<img src="img/25.jpg" alt="img25"/>
+				<figcaption>
+					<h2> <span>จ.เลย</span></h2>
+					<p class="icon-links">
+						<a href="#"><span class="icon-eye"></span></a>
+					</p>
+					<p class="description">Zoe never had the patience of her sisters. She deliberately punched the bear in his face.</p>
+				</figcaption>			
+			</figure>
 		</div>
 	</div>
 	
