--- a/v1.2/Phurua.html
+++ b/v1.2/Phurua.html
@@ -161,7 +161,7 @@
         </div>
         <div class="col-md-6">
 
-        <img class="img-responsive" src="img/Phukradrueng2.jpg" alt=""> <!-- /รูป -->
+        <img class="img-responsive" src="img/Phurua2.jpg" alt=""> <!-- /รูป -->
         </div>
     </div>
    </div>
