--- a/v1.2/Taidam.html
+++ b/v1.2/Taidam.html
@@ -135,12 +135,12 @@
 
         <div class="row">
 <div class="col-lg-12">
-  <h1 class="page-header"><center>อุทยานแห่งชาติภูเรือ/center>
+  <h1 class="page-header"><center>หมู่บ้านวัฒนธรรมไทดําบ้านนาป่าหนาด/center>
   </h1>
   <ol class="breadcrumb">
       <li><a href="index.html">หน้าแรก</a>
       </li>
-      <li class="active">อุทยานแห่งชาติภูเรือ</li>
+      <li class="active">หมู่บ้านวัฒนธรรมไทดําบ้านนาป่าหนาด</li>
   </ol>
 </div>
 </div>
@@ -150,18 +150,18 @@
         <div class="col-md-6">
             <p>
                 <br><br>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4.5"><b>"อุทยานแห่งชาติภูเรือ"</b></font>  <!-- /แก้เนื้อหาตรงนี้ -->
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="4.5"><b>"หมู่บ้านวัฒนธรรมไทดําบ้านนาป่าหนาด"</b></font>  <!-- /แก้เนื้อหาตรงนี้ -->
               <font size="4">
 <br><font size="4.5"><b>"ข้อมูล"</b></font>
-อุทยานแห่งชาติภูเรือ มีพื้นที่ครอบคลุมท้องที่อำเภอภูเรือและอำเภอท่าลี่ จังหวัดเลย อาณาเขตด้านทิศเหนืออยู่ติดกับประเทศลาว รูปพรรณสันฐานของภูเรือมีรูปร่างลักษณะเหมือนเรือใหญ่บนยอดดอยสูงเป็นภูผาสีสันสะดุดตาหินบางก้อนมีลักษณะเหมือนถูกปั้นแต่งไว้ ชาวบ้านเรียกว่า “กว้านสมอ” โดยรอบๆ จะเห็นยอดดอยเป็นขุนเขาน้อยใหญ่ใกล้เคียงเป็นฝ้าขาวด้วยละอองน้ำ หมอก ปกคลุมไว้ท่ามกลางป่าอันอุดมสมบูรณ์ มีเนื้อที่ประมาณ 120.84 ตารางกิโลเมตร  
+ไทดำ บ้านนาป่าหนาด เป็นกลุ่มชาวไทกลุ่ม หนึ่งที่เคยตั้งรกรากอยู่ในเมืองไทดำ บริเวณลุ่มแม่น้ำดำและแม่น้ำแดงในเขตเวียดนามเหนือ เมื่อปี พ.ศ.2425 สมัยสงครามฮ่อ และหลังจากสงครามยุติลง ไทดำส่วนหนึ่งจึงได้อพยพผ่านเข้ามาสู่ประเทศไทย กลุ่มหนึ่งที่เรารู้จักกันดีก็คือ “ไทดำ” หรือ “ลาวโซ่ง” ที่อยู่ในเขตจังหวัดเพชรบุรี ส่วนหนึ่งจะอาศัยอยู่ทางภาคกลาง ส่วนกลุ่มสุดท้ายก็อาศัยอยู่ที่บ้านนาป่าหนาด จังหวัดเลย นี่เอง นอกจากนี้ ไทดำที่อพยพเข้ามายังบ้านนาป่าหนาดแห่งนี้ ส่วนใหญ่ยังเป็นไทดำชนชั้นราชวงศ์แทบทั้งสิ้นอีกด้วย เมื่อเดินทางมาถึง นอกจากการเยี่ยมชมวิถีชีวิตและสภาพบ้านเรือนของชาวไทดำที่ สร้างมากว่าร้อยปีแล้วนั้น จุดที่นักท่องเที่ยวนิยมแวะกันก็คือ “หมู่บ้านวัฒนธรรมไทดำ” ซึ่งตั้งอยู่บริเวณ บ้านนาป่าหนาด หมู่ที่ 4 ที่นี่เราจะพบกับบ้านจำลองที่สร้างขึ้นตามรูปแบบของชาวไทดำในอดีต โดยตัวบ้านจะสร้างแบบเรือนเครื่องผูก หลังคามุงด้วยหญ้าคาหรือแฝก ใต้ถุนสูง ซึ่งภายในบ้านจะแบ่งออกเป็นห้อง ๆ ไล่มาตั้งแต่บันไดบ้านด้านหน้า ที่จะขึ้นได้แต่เฉพาะผู้ชายเท่านั้น เมื่อขึ้นไปแล้วห้องแรกจะเป็นห้องของผีเรือน ผีปู่ย่า ที่ชาวไทดำนับถือ ถัดมาเป็นห้องโล่งและมีพื้นที่กว้างสุดในบ้าน ใช้สำหรับเป็นห้องนอน โดยในห้องนี้จะมีเตาไฟวางไว้ปลายเท้าของเจ้าบ้าน เพื่อให้ความอบอุ่นแก่สมาชิกทุกคนในครอบครัวด้วย ถัดไปซึ่งเป็นส่วนสุดท้ายของตัวบ้าน จะเป็นที่ประกอบอาหาร โดยมีบันไดที่ใช้เป็นทางขึ้นลงสำหรับผู้หญิงชาวไทดำด้วย  
 <br><br><font size="4.5"><b>"ที่ตั้ง"</b></font>
-:ต.หนองบัว อ.ภูเรือ จ.เลย 42160 
+:บ้านนาป่าหนาด หมู่ที่ 4 ต.เขาแก้ว อ.เชียงคาน จ.เลย 42110
 </p>
           </font>
         </div>
         <div class="col-md-6">
 
-        <img class="img-responsive" src="img/Phurua2.jpg" alt=""> <!-- /รูป -->
+        <img class="img-responsive" src="img/taidam3.jpg" alt=""> <!-- /รูป -->
         </div>
     </div>
    </div>
